--- a/themes/matery/layout/_partial/social-link.ejs
+++ b/themes/matery/layout/_partial/social-link.ejs
@@ -1,29 +1,29 @@
 <% if (theme.socialLink.github) { %>
-    <a href="<%= theme.socialLink.github %>" class="tooltipped" target="_blank" data-tooltip="访问我的GitHub" data-position="top" data-delay="50">
+    <a href="<%= theme.socialLink.github %>" class="tooltipped" target="_blank" data-tooltip="访问我的 GitHub: <%= theme.socialLink.github %>" data-position="top" data-delay="50">
         <i class="fab fa-github"></i>
     </a>
 <% } %>
 
 <% if (theme.socialLink.email) { %>
-    <a href="mailto:<%= theme.socialLink.email %>" class="tooltipped" target="_blank" data-tooltip="邮件联系我" data-position="top" data-delay="50">
+    <a href="mailto:<%= theme.socialLink.email %>" class="tooltipped" target="_blank" data-tooltip="邮件联系我: baiyude@tju.edu.cn" data-position="top" data-delay="50">
         <i class="fas fa-envelope-open"></i>
     </a>
 <% } %>
 
 <% if (theme.socialLink.facebook) { %>
-    <a href="<%= theme.socialLink.facebook %>" class="tooltipped" target="_blank" data-tooltip="关注我的Facebook: <%= theme.socialLink.facebook %>" data-position="top" data-delay="50">
+    <a href="<%= theme.socialLink.facebook %>" class="tooltipped" target="_blank" data-tooltip="关注我的 Facebook: <%= theme.socialLink.facebook %>" data-position="top" data-delay="50">
         <i class="fab fa-facebook-f"></i>
     </a>
 <% } %>
 
 <% if (theme.socialLink.twitter) { %>
-    <a href="<%= theme.socialLink.twitter %>" class="tooltipped" target="_blank" data-tooltip="关注我的Twitter: <%= theme.socialLink.twitter %>" data-position="top" data-delay="50">
+    <a href="<%= theme.socialLink.twitter %>" class="tooltipped" target="_blank" data-tooltip="关注我的 Twitter: <%= theme.socialLink.twitter %>" data-position="top" data-delay="50">
         <i class="fab fa-twitter"></i>
     </a>
 <% } %>
 
 <% if (theme.socialLink.qq) { %>
-    <a href="tencent://AddContact/?fromId=50&fromSubId=1&subcmd=all&uin=<%= theme.socialLink.qq %>" class="tooltipped" target="_blank" data-tooltip="QQ联系我: <%= theme.socialLink.qq %>" data-position="top" data-delay="50">
+    <a href="tencent://AddContact/?fromId=50&fromSubId=1&subcmd=all&uin=<%= theme.socialLink.qq %>" class="tooltipped" target="_blank" data-tooltip="QQ 联系我: <%= theme.socialLink.qq %>" data-position="top" data-delay="50">
         <i class="fab fa-qq"></i>
     </a>
 <% } %>
