--- a/themes/matery/layout/_partial/footer.ejs
+++ b/themes/matery/layout/_partial/footer.ejs
@@ -5,7 +5,7 @@
     <div class="container row center-align" style="margin-bottom: <% if (theme.time.enable) { %>15<% } else { %>0<% } %>px !important;">
         <div class="col s12 m8 l8 copy-right">
             Copyright&nbsp;&copy;
-            <span id="year"><%- theme.time.year %></span>
+            <span id="year"><%- theme.time.year %> - 2022</span>
             <a href="<%- url_for('/about') %>" target="_blank"><%- config.author %></a>
             |&nbsp;Powered by&nbsp;<a href="https://hexo.io/" target="_blank">Hexo</a>
             |&nbsp;Theme&nbsp;<a href="https://github.com/blinkfox/hexo-theme-matery" target="_blank">Matery</a>
