--- a/themes/matery/layout/_partial/social-link.ejs
+++ b/themes/matery/layout/_partial/social-link.ejs
@@ -1,11 +1,11 @@
 <% if (theme.socialLink.github) { %>
-    <a href="<%= theme.socialLink.github %>" class="tooltipped" target="_blank" data-tooltip="访问我的 GitHub: <%= theme.socialLink.github %>" data-position="top" data-delay="50">
+    <a href="<%= theme.socialLink.github %>" class="tooltipped" target="_blank" data-tooltip="访问我的 GitHub" data-position="top" data-delay="50">
         <i class="fab fa-github"></i>
     </a>
 <% } %>
 
 <% if (theme.socialLink.email) { %>
-    <a href="mailto:<%= theme.socialLink.email %>" class="tooltipped" target="_blank" data-tooltip="邮件联系我: baiyude@tju.edu.cn" data-position="top" data-delay="50">
+    <a href="mailto:<%= theme.socialLink.email %>" class="tooltipped" target="_blank" data-tooltip="邮件联系我" data-position="top" data-delay="50">
         <i class="fas fa-envelope-open"></i>
     </a>
 <% } %>
@@ -29,7 +29,7 @@
 <% } %>
 
 <% if (theme.socialLink.weibo) { %>
-    <a href="<%= theme.socialLink.weibo %>" class="tooltipped" target="_blank" data-tooltip="关注我的微博: <%= theme.socialLink.weibo %>" data-position="top" data-delay="50">
+    <a href="<%= theme.socialLink.weibo %>" class="tooltipped" target="_blank" data-tooltip="关注我的微博" data-position="top" data-delay="50">
         <i class="fab fa-weibo"></i>
     </a>
 <% } %>
